lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> <empty>
Rule 4     instruction -> ;
Rule 5     expression -> INT
Rule 6     expression -> FLOAT
Rule 7     expression -> matrix
Rule 8     expression -> STRING
Rule 9     expression -> ID
Rule 10    expression -> ( expression )
Rule 11    instruction -> { instructions }
Rule 12    expression -> expression + expression
Rule 13    expression -> expression - expression
Rule 14    expression -> expression * expression
Rule 15    expression -> expression / expression
Rule 16    expression -> expression M_ADD expression
Rule 17    expression -> expression M_SUB expression
Rule 18    expression -> expression M_MUL expression
Rule 19    expression -> expression M_DIV expression
Rule 20    condition -> expression < expression
Rule 21    condition -> expression > expression
Rule 22    condition -> expression LE expression
Rule 23    condition -> expression GE expression
Rule 24    condition -> expression NEQ expression
Rule 25    condition -> expression EQ expression
Rule 26    expression -> - expression
Rule 27    matrix -> expression M_TRANSPOSE
Rule 28    matrix -> ZEROS ( expression )
Rule 29    matrix -> ONES ( expression )
Rule 30    matrix -> EYE ( expression )
Rule 31    instruction -> ID = expression ;
Rule 32    instruction -> ID A_ADD expression ;
Rule 33    instruction -> ID A_SUB expression ;
Rule 34    instruction -> ID A_MUL expression ;
Rule 35    instruction -> ID A_DIV expression ;
Rule 36    instruction -> ID array = expression ;
Rule 37    instruction -> ID array A_ADD expression ;
Rule 38    instruction -> ID array A_SUB expression ;
Rule 39    instruction -> ID array A_MUL expression ;
Rule 40    instruction -> ID array A_DIV expression ;
Rule 41    instruction -> IF ( condition ) instruction
Rule 42    instruction -> IF ( condition ) instruction ELSE instruction
Rule 43    instruction -> WHILE ( condition ) instruction
Rule 44    instruction -> FOR ID = expression : expression instruction
Rule 45    instruction -> BREAK ;
Rule 46    instruction -> CONTINUE ;
Rule 47    instruction -> RETURN expression ;
Rule 48    instruction -> PRINT list ;
Rule 49    matrix -> [ arraylist ]
Rule 50    arraylist -> array
Rule 51    arraylist -> arraylist , array
Rule 52    array -> [ list ]
Rule 53    list -> expression
Rule 54    list -> list , expression
Rule 55    expression -> ID array

Terminals, with rules where they appear

(                    : 10 28 29 30 41 42 43
)                    : 10 28 29 30 41 42 43
*                    : 14
+                    : 12
,                    : 51 54
-                    : 13 26
/                    : 15
:                    : 44
;                    : 4 31 32 33 34 35 36 37 38 39 40 45 46 47 48
<                    : 20
=                    : 31 36 44
>                    : 21
A_ADD                : 32 37
A_DIV                : 35 40
A_MUL                : 34 39
A_SUB                : 33 38
BREAK                : 45
CONTINUE             : 46
ELSE                 : 42
EQ                   : 25
EYE                  : 30
FLOAT                : 6
FOR                  : 44
GE                   : 23
ID                   : 9 31 32 33 34 35 36 37 38 39 40 44 55
IF                   : 41 42
INT                  : 5
LE                   : 22
M_ADD                : 16
M_DIV                : 19
M_MUL                : 18
M_SUB                : 17
M_TRANSPOSE          : 27
NEQ                  : 24
ONES                 : 29
PRINT                : 48
RETURN               : 47
STRING               : 8
WHILE                : 43
ZEROS                : 28
[                    : 49 52
]                    : 49 52
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear

array                : 36 37 38 39 40 50 51 55
arraylist            : 49 51
condition            : 41 42 43
expression           : 10 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 44 44 47 53 54
instruction          : 2 41 42 42 43 44
instructions         : 1 2 11
list                 : 48 52 54
matrix               : 7
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> .

    ;               reduce using rule 3 (instructions -> .)
    {               reduce using rule 3 (instructions -> .)
    ID              reduce using rule 3 (instructions -> .)
    IF              reduce using rule 3 (instructions -> .)
    WHILE           reduce using rule 3 (instructions -> .)
    FOR             reduce using rule 3 (instructions -> .)
    BREAK           reduce using rule 3 (instructions -> .)
    CONTINUE        reduce using rule 3 (instructions -> .)
    RETURN          reduce using rule 3 (instructions -> .)
    PRINT           reduce using rule 3 (instructions -> .)
    $end            reduce using rule 3 (instructions -> .)

    program                        shift and go to state 1
    instructions                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . ;
    (11) instruction -> . { instructions }
    (31) instruction -> . ID = expression ;
    (32) instruction -> . ID A_ADD expression ;
    (33) instruction -> . ID A_SUB expression ;
    (34) instruction -> . ID A_MUL expression ;
    (35) instruction -> . ID A_DIV expression ;
    (36) instruction -> . ID array = expression ;
    (37) instruction -> . ID array A_ADD expression ;
    (38) instruction -> . ID array A_SUB expression ;
    (39) instruction -> . ID array A_MUL expression ;
    (40) instruction -> . ID array A_DIV expression ;
    (41) instruction -> . IF ( condition ) instruction
    (42) instruction -> . IF ( condition ) instruction ELSE instruction
    (43) instruction -> . WHILE ( condition ) instruction
    (44) instruction -> . FOR ID = expression : expression instruction
    (45) instruction -> . BREAK ;
    (46) instruction -> . CONTINUE ;
    (47) instruction -> . RETURN expression ;
    (48) instruction -> . PRINT list ;

    $end            reduce using rule 1 (program -> instructions .)
    ;               shift and go to state 4
    {               shift and go to state 5
    ID              shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13

    instruction                    shift and go to state 3

state 3

    (2) instructions -> instructions instruction .

    ;               reduce using rule 2 (instructions -> instructions instruction .)
    {               reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    IF              reduce using rule 2 (instructions -> instructions instruction .)
    WHILE           reduce using rule 2 (instructions -> instructions instruction .)
    FOR             reduce using rule 2 (instructions -> instructions instruction .)
    BREAK           reduce using rule 2 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 2 (instructions -> instructions instruction .)
    RETURN          reduce using rule 2 (instructions -> instructions instruction .)
    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    }               reduce using rule 2 (instructions -> instructions instruction .)


state 4

    (4) instruction -> ; .

    ;               reduce using rule 4 (instruction -> ; .)
    {               reduce using rule 4 (instruction -> ; .)
    ID              reduce using rule 4 (instruction -> ; .)
    IF              reduce using rule 4 (instruction -> ; .)
    WHILE           reduce using rule 4 (instruction -> ; .)
    FOR             reduce using rule 4 (instruction -> ; .)
    BREAK           reduce using rule 4 (instruction -> ; .)
    CONTINUE        reduce using rule 4 (instruction -> ; .)
    RETURN          reduce using rule 4 (instruction -> ; .)
    PRINT           reduce using rule 4 (instruction -> ; .)
    $end            reduce using rule 4 (instruction -> ; .)
    }               reduce using rule 4 (instruction -> ; .)
    ELSE            reduce using rule 4 (instruction -> ; .)


state 5

    (11) instruction -> { . instructions }
    (2) instructions -> . instructions instruction
    (3) instructions -> .

    }               reduce using rule 3 (instructions -> .)
    ;               reduce using rule 3 (instructions -> .)
    {               reduce using rule 3 (instructions -> .)
    ID              reduce using rule 3 (instructions -> .)
    IF              reduce using rule 3 (instructions -> .)
    WHILE           reduce using rule 3 (instructions -> .)
    FOR             reduce using rule 3 (instructions -> .)
    BREAK           reduce using rule 3 (instructions -> .)
    CONTINUE        reduce using rule 3 (instructions -> .)
    RETURN          reduce using rule 3 (instructions -> .)
    PRINT           reduce using rule 3 (instructions -> .)

    instructions                   shift and go to state 14

state 6

    (31) instruction -> ID . = expression ;
    (32) instruction -> ID . A_ADD expression ;
    (33) instruction -> ID . A_SUB expression ;
    (34) instruction -> ID . A_MUL expression ;
    (35) instruction -> ID . A_DIV expression ;
    (36) instruction -> ID . array = expression ;
    (37) instruction -> ID . array A_ADD expression ;
    (38) instruction -> ID . array A_SUB expression ;
    (39) instruction -> ID . array A_MUL expression ;
    (40) instruction -> ID . array A_DIV expression ;
    (52) array -> . [ list ]

    =               shift and go to state 15
    A_ADD           shift and go to state 16
    A_SUB           shift and go to state 17
    A_MUL           shift and go to state 18
    A_DIV           shift and go to state 19
    [               shift and go to state 21

    array                          shift and go to state 20

state 7

    (41) instruction -> IF . ( condition ) instruction
    (42) instruction -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 22


state 8

    (43) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 23


state 9

    (44) instruction -> FOR . ID = expression : expression instruction

    ID              shift and go to state 24


state 10

    (45) instruction -> BREAK . ;

    ;               shift and go to state 25


state 11

    (46) instruction -> CONTINUE . ;

    ;               shift and go to state 26


state 12

    (47) instruction -> RETURN . expression ;
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    expression                     shift and go to state 27
    matrix                         shift and go to state 30

state 13

    (48) instruction -> PRINT . list ;
    (53) list -> . expression
    (54) list -> . list , expression
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    list                           shift and go to state 39
    expression                     shift and go to state 40
    matrix                         shift and go to state 30

state 14

    (11) instruction -> { instructions . }
    (2) instructions -> instructions . instruction
    (4) instruction -> . ;
    (11) instruction -> . { instructions }
    (31) instruction -> . ID = expression ;
    (32) instruction -> . ID A_ADD expression ;
    (33) instruction -> . ID A_SUB expression ;
    (34) instruction -> . ID A_MUL expression ;
    (35) instruction -> . ID A_DIV expression ;
    (36) instruction -> . ID array = expression ;
    (37) instruction -> . ID array A_ADD expression ;
    (38) instruction -> . ID array A_SUB expression ;
    (39) instruction -> . ID array A_MUL expression ;
    (40) instruction -> . ID array A_DIV expression ;
    (41) instruction -> . IF ( condition ) instruction
    (42) instruction -> . IF ( condition ) instruction ELSE instruction
    (43) instruction -> . WHILE ( condition ) instruction
    (44) instruction -> . FOR ID = expression : expression instruction
    (45) instruction -> . BREAK ;
    (46) instruction -> . CONTINUE ;
    (47) instruction -> . RETURN expression ;
    (48) instruction -> . PRINT list ;

    }               shift and go to state 41
    ;               shift and go to state 4
    {               shift and go to state 5
    ID              shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13

    instruction                    shift and go to state 3

state 15

    (31) instruction -> ID = . expression ;
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    expression                     shift and go to state 42
    matrix                         shift and go to state 30

state 16

    (32) instruction -> ID A_ADD . expression ;
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    expression                     shift and go to state 43
    matrix                         shift and go to state 30

state 17

    (33) instruction -> ID A_SUB . expression ;
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    expression                     shift and go to state 44
    matrix                         shift and go to state 30

state 18

    (34) instruction -> ID A_MUL . expression ;
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    expression                     shift and go to state 45
    matrix                         shift and go to state 30

state 19

    (35) instruction -> ID A_DIV . expression ;
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    expression                     shift and go to state 46
    matrix                         shift and go to state 30

state 20

    (36) instruction -> ID array . = expression ;
    (37) instruction -> ID array . A_ADD expression ;
    (38) instruction -> ID array . A_SUB expression ;
    (39) instruction -> ID array . A_MUL expression ;
    (40) instruction -> ID array . A_DIV expression ;

    =               shift and go to state 47
    A_ADD           shift and go to state 48
    A_SUB           shift and go to state 49
    A_MUL           shift and go to state 50
    A_DIV           shift and go to state 51


state 21

    (52) array -> [ . list ]
    (53) list -> . expression
    (54) list -> . list , expression
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    list                           shift and go to state 52
    expression                     shift and go to state 40
    matrix                         shift and go to state 30

state 22

    (41) instruction -> IF ( . condition ) instruction
    (42) instruction -> IF ( . condition ) instruction ELSE instruction
    (20) condition -> . expression < expression
    (21) condition -> . expression > expression
    (22) condition -> . expression LE expression
    (23) condition -> . expression GE expression
    (24) condition -> . expression NEQ expression
    (25) condition -> . expression EQ expression
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    condition                      shift and go to state 53
    expression                     shift and go to state 54
    matrix                         shift and go to state 30

state 23

    (43) instruction -> WHILE ( . condition ) instruction
    (20) condition -> . expression < expression
    (21) condition -> . expression > expression
    (22) condition -> . expression LE expression
    (23) condition -> . expression GE expression
    (24) condition -> . expression NEQ expression
    (25) condition -> . expression EQ expression
    (5) expression -> . INT
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . ID
    (10) expression -> . ( expression )
    (12) expression -> . expression + expression
    (13) expression -> . expression - expression
    (14) expression -> . expression * expression
    (15) expression -> . expression / expression
    (16) expression -> . expression M_ADD expression
    (17) expression -> . expression M_SUB expression
    (18) expression -> . expression M_MUL expression
    (19) expression -> . expression M_DIV expression
    (26) expression -> . - expression
    (55) expression -> . ID array
    (27) matrix -> . expression M_TRANSPOSE
    (28) matrix -> . ZEROS ( expression )
    (29) matrix -> . ONES ( expression )
    (30) matrix -> . EYE ( expression )
    (49) matrix -> . [ arraylist ]

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 31
    ID              shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    condition                      shift and go to state 55
    expression                     shift and go to state 54
    matrix                         shift and go to state 30

state 24

    (44) instruction -> FOR ID . = expression : expression instruction

    =               shift and go to state 56


state 25

    (45) instruction -> BREAK ; .

    ;               reduce using rule 45 (instruction -> BREAK ; .)
    {               reduce using rule 45 (instruction -> BREAK ; .)
    ID              reduce using rule 45 (instruction -> BREAK ; .)
    IF              reduce using rule 45 (instruction -> BREAK ; .)
    WHILE           reduce using rule 45 (instruction -> BREAK ; .)
    FOR             reduce using rule 45 (instruction -> BREAK ; .)
    BREAK           reduce using rule 45 (instruction -> BREAK ; .)
    CONTINUE        reduce using rule 45 (instruction -> BREAK ; .)
    RETURN          reduce using rule 45 (instruction -> BREAK ; .)
    PRINT           reduce using rule 45 (instruction -> BREAK ; .)
    $end            reduce using rule 45 (instruction -> BREAK ; .)
    }               reduce using rule 45 (instruction -> BREAK ; .)
    ELSE            reduce using rule 45 (instruction -> BREAK ; .)


state 26

    (46) instruction -> CONTINUE ; .

    ;               reduce using rule 46 (instruction -> CONTINUE ; .)
    {               reduce using rule 46 (instruction -> CONTINUE ; .)
    ID              reduce using rule 46 (instruction -> CONTINUE ; .)
    IF              reduce using rule 46 (instruction -> CONTINUE ; .)
    WHILE           reduce using rule 46 (instruction -> CONTINUE ; .)
    FOR             reduce using rule 46 (instruction -> CONTINUE ; .)
    BREAK           reduce using rule 46 (instruction -> CONTINUE ; .)
    CONTINUE        reduce using rule 46 (instruction -> CONTINUE ; .)
    RETURN          reduce using rule 46 (instruction -> CONTINUE ; .)
    PRINT           reduce using rule 46 (instruction -> CONTINUE ; .)
    $end            reduce using rule 46 (instruction -> CONTINUE ; .)
    }               reduce using rule 46 (instruction -> CONTINUE ; .)
    ELSE            reduce using rule 46 (instruction -> CONTINUE ; .)


state 27

    (47) instruction -> RETURN expression . ;
    (12) expression -> expression . + expression
    (13) expression -> expression . - expression
    (14) expression -> expression . * expression
    (15) expression -> expression . / expression
    (16) expression -> expression . M_ADD expression
    (17) expression -> expression . M_SUB expression
    (18) expression -> expression . M_MUL expression
    (19) expression -> expression . M_DIV expression
    (27) matrix -> expression . M_TRANSPOSE

    ;               shift and go to state 57
    +               shift and go to state 58
    -               shift and go to state 59
    *               shift and go to state 60
    /               shift and go to state 61
    M_ADD           shift and go to state 62
    M_SUB           shift and go to state 63
    M_MUL           shift and go to state 64
    M_DIV           shift and go to state 65
    M_TRANSPOSE     shift and go to state 66


state 28

    (5) expression -> INT .

    ;               reduce using rule 5 (expression -> INT .)
    +               reduce using rule 5 (expression -> INT .)
    -               reduce using rule 5 (expression -> INT .)
    *               reduce using rule 5 (expression -> INT .)
    /               reduce using rule 5 (expression -> INT .)
    M_ADD           reduce using rule 5 (expression -> INT .)
    M_SUB           reduce using rule 5 (expression -> INT .)
    M_MUL           reduce using rule 5 (expression -> INT .)
    M_DIV           reduce using rule 5 (expression -> INT .)
    M_TRANSPOSE     reduce using rule 5 (expression -> INT .)
    ,               reduce using rule 5 (expression -> INT .)
    ]               reduce using rule 5 (expression -> INT .)
    <               reduce using rule 5 (expression -> INT .)
    >               reduce using rule 5 (expression -> INT .)
    LE              reduce using rule 5 (expression -> INT .)
    GE              reduce using rule 5 (expression -> INT .)
    NEQ             reduce using rule 5 (expression -> INT .)
    EQ              reduce using rule 5 (expression -> INT .)
    )               reduce using rule 5 (expression -> INT .)
    :               reduce using rule 5 (expression -> INT .)
    {               reduce using rule 5 (expression -> INT .)
    ID              reduce using rule 5 (expression -> INT .)
    IF              reduce using rule 5 (expression -> INT .)
    WHILE           reduce using rule 5 (expression -> INT .)
    FOR             reduce using rule 5 (expression -> INT .)
    BREAK           reduce using rule 5 (expression -> INT .)
    CONTINUE        reduce using rule 5 (expression -> INT .)
    RETURN          reduce using rule 5 (expression -> INT .)
    PRINT           reduce using rule 5 (expression -> INT .)


state 29

    (6) expression -> FLOAT .
